--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.34",
     "aws-sdk": "^2.1209.0",
+    "bootstrap": "^5.2.2",
+    "mapbox-gl": "^1.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "react-map-gl": "^5.2.11",
-    "mapbox-gl": "^1.0.0"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
